--- a/templates/blocks/navigation.html
+++ b/templates/blocks/navigation.html
@@ -17,6 +17,7 @@
         </header>
         <div class="nav-scroller py-1 mb-2">
       <nav class="nav d-flex justify-content-">
+            <a class="p-2 text-muted" href="/">Главная</a>
           {% if DISPLAY_CATEGORIES_ON_MENU %}
               {% for cat, null in categories %}
                   <a class="p-2 text-muted" href="{{ SITEURL }}/{{ cat.url }}">{{ cat }}</a>
